--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,67 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="io.github.controlwear.joystickdemo.MainActivity"
-    android:padding="16dp">
+    tools:context="io.github.controlwear.joystickdemo.MainActivity">
 
-    <io.github.controlwear.virtual.joystick.android.JoystickView
-        xmlns:custom="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/joystickView_left"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="64dp"
-        custom:JV_backgroundColor="#430FCC"
-        custom:JV_buttonImage="@drawable/green_ball" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <io.github.controlwear.virtual.joystick.android.JoystickView
-        xmlns:custom="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/joystickView_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="64dp"
-        custom:JV_backgroundColor="#430FCC"
-        custom:JV_buttonImage="@drawable/green_ball"/>
+    </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/content_main" />
 
-    <Switch
-        android:id="@+id/simpleSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:colorControlActivated="#ff932c"
-        android:text="Udp"
-        android:trackTint="@color/switch_color" />
-
-    <EditText
-        android:id="@+id/IpAddress"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:drawableLeft="@drawable/ic_network_wifi"
-        android:hint="@string/ip"
-        android:inputType="text"
-        android:padding="5dp"
-        android:singleLine="true"
-        android:textColor="#999999"
-        android:textSize="14dp"
-        android:visibility="visible" />
-
-    <Button
-        android:id="@+id/btnAddTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/IpAddress"
-        android:layout_alignBottom="@+id/IpAddress"
-        android:layout_toEndOf="@+id/IpAddress"
-        android:text="@string/btn_AddTitle" />
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
